Finishing up private and public key signing